style.css
@import url("https://fonts.cdnfonts.com/css/spinwerad");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap");

html,
body,
.content {
  height: 100%;
  min-height: 100%;
  font-family: "Inter";
}

.region,
.modal-title {
  font-family: "Spinwerad";
}

body,
body.modal-open {
  margin: 0;
  width: 100% !important;
  max-width: 100% !important;
  position: relative;
  border-radius: 5px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow-y: scroll;
  overflow-x: hidden;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
body::-webkit-scrollbar {
  display: none;
}

.content {
  position: relative;
  padding-bottom: 100px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.modal {
  background: white;
  position: fixed;
  bottom: 0;
  -ms-scroll-chaining: none;
  overscroll-behavior: contain;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
  -webkit-box-shadow: -3px 0px 10px -6px rgb(0 0 0 / 35%) !important;
  box-shadow: -3px 0px 10px -6px rgb(0 0 0 / 35%) !important;
  max-width: 100%;
}

.backButton i {
  font-size: 24px;
}

.modal::-webkit-scrollbar {
  display: none;
}
.modal-header,
.modal-body {
  padding: 1rem 0;
}

.modal-content {
  height: 100%;
  max-height: 100%;
}

.modal-dialog {
  margin: 0;
  position: static;
  height: 100%;
  width: 100% !important;
  max-width: 100% !important;
  margin-bottom: 35px;
}

.stand-item_header-details {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 6px;
  font-size: 14px;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: rgba(0, 0, 0, 0.35);
}

.stand-item_header-details .v-sep {
  width: 1px;
  height: 14px;
  background: rgba(0, 0, 0, 0.35);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.stand-num {
  color: rgba(136, 71, 64, 1);
  font-weight: 600;
}

.stand-item_header-main {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 27px;
  color: rgba(0, 0, 0);
}

.stand-item_header-main i {
  color: rgba(0, 0, 0, 0.35);
}
.stand-item_header {
  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
  padding: 16px 0;
}

.stand-item_body.modal,
.stand-item_body .modal-dialog,
.stand-item_body .modal-content,
.stand-item_body .modal-header {
  border-radius: 0;
  border: none;
}

#header,
.modal-nav {
  position: sticky;
  background-color: white;
  top: 0;
  z-index: 99;
}

.modal-nav {
  z-index: 99999;
}
.nav-left {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 15px;
}

.search_container {
  position: sticky;
  z-index: 100;
  padding-bottom: 8px;
  margin-bottom: 15px;
}
.search {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background-color: rgb(242 242 242);
  border-radius: 4px;
  font-size: 16px;
  color: rgba(0, 0, 0, 0.35);
  margin-bottom: 16px;
  -webkit-box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 10%);
  box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 10%);
}

.search i {
  width: 20px;
}

.search input {
  border: 0;
  max-width: 100%;
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: transparent;
  color: rgba(0, 0, 0, 0.35);
}

.search input:focus-visible {
  outline: 0;
}

.search input::-webkit-input-placeholder {
  color: rgba(0, 0, 0, 0.35);
}

.search input::-moz-placeholder {
  color: rgba(0, 0, 0, 0.35);
}

.search input:-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.35);
}

.search input::-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.35);
}

.search input::placeholder {
  color: rgba(0, 0, 0, 0.35);
}

.cart {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  background-color: rgba(0, 0, 0, 0.05);
  padding: 8px 16px;
  border-radius: 100px;
}

.cart-count {
  color: rgba(136, 71, 64, 1);
}

.modal-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}
.modal-b-title {
  font-size: 14px;
  color: rgba(0, 0, 0, 0.35);
}
.modal-title {
  font-size: 43px;
}

.tabs-nav_container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: 24px 0px;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: sticky;
  top: 72px;
  z-index: 99;
  background: white;
}

.tabs-nav {
  display: flex;
  justify-content: space-between;
  max-width: 80%;
}

/* .tabs-nav span.active::after {
  content: "";
  display: block;
  width: 6px;
  height: 6px;
  border-radius: 100%;
  background: #ad0514;
  position: relative;
} */

.tabs-nav span {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-transition: all 300ms ease-out;
  -o-transition: all 300ms ease-out;
  transition: all 300ms ease-out;
}

.tabs-nav span.active {
  color: #000;
}

.tabs-nav span {
  color: #8f8f8f;
  font-size: 14px;
}

.modal-header {
  padding-bottom: 0;
}

.modal-body {
  padding-top: 0;
}

.tab-container {
  overflow-x: scroll;
  display: flex;
  scroll-snap-stop: always;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  width: 100%;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.tab-container::-webkit-scrollbar {
  display: none;
}
.halo {
  position: fixed;
  pointer-events: none;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100px;
  width: 100%;
  display: block;
  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(#ffffff));
  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
  z-index: 999999;
}

.product-cards {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  flex: 1 0 100%;
  scroll-snap-align: start;
  padding-bottom: 16px;
  color: #000;
}

a.product-card_desc-header {
  color: #000;
}

.product-card {
  -webkit-box-flex: 1;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  position: relative;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 32px 0;
  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
  min-height: fit-content;
  max-height: 227px;
}
.product-card_addToFav {
  position: absolute;
  right: 0px;
  top: 32px;
  border-radius: 50px;
  padding: 5px 10px;
  color: #ad0514;
  border: 1px solid rgba(0, 0, 0, 0.04);
  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
  -webkit-transition: all 150ms ease-in;
  -o-transition: all 150ms ease-in;
  transition: all 150ms ease-in;
}

.product-card_desc-cantine {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  color: rgba(0, 0, 0, 0.35);
}

h3.product-card_desc-title {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 19px;
  color: #000000;
  margin-bottom: 0;
}

.product-card_desc-reviews i {
  color: #884740;
}

.product-card_desc-reviews {
  font-size: 14px;
}

span.reviews-number {
  color: rgba(0, 0, 0, 0.35);
}

.product-card_desc-price {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 19px;
  line-height: 23px;
  color: #000000;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 6px;
}

small.price-details {
  font-size: 12px;
}

.product-card_desc-packaging {
  font-size: 12px;
  color: rgba(0, 0, 0, 0.35);
}

.product-card_desc {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 32px;
}

.product-card_desc-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.product-card_desc-body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.product-card_desc {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 32px;
}

.product-card_desc-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.product-card_desc-body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.product-card_img {
  -o-object-fit: contain;
  object-fit: contain;
  max-width: 30%;
  max-height: 152px;
}

.product-card_addToFav:hover,
.product-card_addToFav:active,
.product-card_addToFav:focus,
.product-card_addToFav:focus-within {
  -webkit-box-shadow: 0px 2px 4px rgb(0 0 0 / 3%);
  box-shadow: 0px 2px 4px rgb(0 0 0 / 3%);
  -webkit-transform: scale(0.85);
  -ms-transform: scale(0.85);
  transform: scale(0.85);
}

#dot {
  stroke: #9f211f;
}
@media only screen and (max-width: 575.99) {
  .sub {
    display: block;
  }
}

